--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div class="navbar">
         <div class="container">
           <div class="navbar-brand">
-            <a href="/" class="navbar-item logo-link">
+            <a href="/" class="navbar-item logo-link focus-visible">
               <img src="https://www.epam.com/content/dam/epam/global/logo_white-blue.svg">
             </a>
             <span class="navbar-burger burger" data-target="navbarMenu">
@@ -79,7 +79,7 @@
                 <input class="input">
               </p>
               <p class="control">
-                <a href="/" class="button is-info">Notify Me</a>
+                <a href="/" class="button is-info focus-visible">Notify Me</a>
               </p>
             </div>
           </div>
@@ -260,19 +260,19 @@
     <div class="tabs is-boxed is-centered main-menu" id="nav">
       <ul>
         <li data-target="pane-1" id="1" class="is-active">
-          <a href="/">
+          <a>
             <span class="icon is-small"><i class="fa fa-image"></i></span>
             <span>Pictures</span>
           </a>
         </li>
         <li data-target="pane-3" id="3">
-          <a href="/">
+          <a>
             <span class="icon is-small"><i class="fab fa-superpowers"></i></span>
             <span>Team</span>
           </a>
         </li>
         <li data-target="pane-4" id="4">
-          <a href="/">
+          <a>
             <span class="icon is-small"><i class="fa fa-film"></i></span>
             <span>Video</span>
           </a>
