--- a/index.html
+++ b/index.html
@@ -19,17 +19,17 @@
             <a href="/" class="navbar-item logo-link focus-visible">
               <img src="https://www.epam.com/content/dam/epam/global/logo_white-blue.svg">
             </a>
-            <span class="navbar-burger burger" data-target="navbarMenu">
+            <button class="navbar-burger burger" data-target="navbarMenu">
               <span></span>
               <span></span>
               <span></span>
-            </span>
+            </button>
           </div>
 
           <div id="navbarMenu" class="navbar-menu">
             <div class="navbar-end">
               <span class="navbar-item">
-                <a href="/" class="button is-white is-outlined">
+                <a href="/" class="has-text-white">
                   <span class="icon">
                     <i class="fa fa-home"></i>
                   </span>
@@ -37,7 +37,7 @@
                 </a>
               </span>
               <span class="navbar-item">
-                <a href="/" class="button is-white is-outlined">
+                <a href="/" class="has-text-white">
                   <span class="icon">
                     <i class="fab fa-superpowers"></i>
                   </span>
@@ -45,7 +45,7 @@
                 </a>
               </span>
               <span class="navbar-item">
-                <a href="/" class="button is-white is-outlined">
+                <a href="/" class="has-text-white">
                   <span class="icon">
                     <i class="fa fa-book"></i>
                   </span>
@@ -53,7 +53,7 @@
                 </a>
               </span>
               <span class="navbar-item">
-                <a href="/" class="button is-white is-outlined">
+                <a href="/" class="has-text-white">
                   <span class="icon">
                     <i class="fab fa-github"></i>
                   </span>
@@ -79,7 +79,7 @@
                 <input class="input">
               </p>
               <p class="control">
-                <a href="/" class="button is-info focus-visible">Notify Me</a>
+                <button class="button is-info">Notify Me</button>
               </p>
             </div>
           </div>
@@ -260,22 +260,22 @@
     <div class="tabs is-boxed is-centered main-menu" id="nav">
       <ul>
         <li data-target="pane-1" id="1" class="is-active">
-          <a>
+          <button type="button" class="tab">
             <span class="icon is-small"><i class="fa fa-image"></i></span>
             <span>Pictures</span>
-          </a>
+          </button>
         </li>
         <li data-target="pane-3" id="3">
-          <a>
+          <button type="button" class="tab">
             <span class="icon is-small"><i class="fab fa-superpowers"></i></span>
             <span>Team</span>
-          </a>
+          </button>
         </li>
         <li data-target="pane-4" id="4">
-          <a>
+          <button type="button" class="tab">
             <span class="icon is-small"><i class="fa fa-film"></i></span>
             <span>Video</span>
-          </a>
+          </button>
         </li>
       </ul>
     </div>
@@ -296,7 +296,7 @@
                 <div class="content">
                   <div>Click on image above</div>
                   <p>Purus semper eget duis at tellus at urna condimentum mattis. Non blandit massa enim nec. Integer enim neque volutpat ac tincidunt vitae semper quis. Accumsan tortor posuere ac ut consequat semper viverra nam.</p>
-                  <span class="button is-link modal-button" data-target="modal-image1">Image modal</span>
+                  <button class="button is-link modal-button" data-target="modal-image1">Image modal</button>
                 </div>
               </div>
             </div>
@@ -313,7 +313,7 @@
                   <div>Tempor orci dapibus ultrices in.</div>
                   <p>Ut venenatis tellus in metus vulputate. Amet consectetur adipiscing elit pellentesque. Sed arcu non odio euismod lacinia at quis risus. Faucibus turpis in eu mi bibendum neque egestas cmonsu songue. Phasellus vestibulum lorem
                     sed risus.</p>
-                  <span class="button is-link modal-button" data-target="modal-card">Modal Card</span>
+                  <button class="button is-link modal-button" data-target="modal-card">Modal Card</button>
                 </div>
               </div>
             </div>
@@ -329,7 +329,7 @@
                 <div class="content">
                   <div>Click anywhere on card</div>
                   <p>Imperdiet dui accumsan sit amet nulla facilisi morbi. Fusce ut placerat orci nulla pellentesque dignissim enim. Libero id faucibus nisl tincidunt eget nullam. Commodo viverra maecenas accumsan lacus vel facilisis.</p>
-                  <span class="button is-link modal-button" data-target="modal-image2">Image modal</span>
+                  <button class="button is-link modal-button" data-target="modal-image2">Image modal</button>
                 </div>
               </div>
             </div>
@@ -426,7 +426,7 @@
             </div>
             <p class="title">New York</p>
             <p class="subtitle">Fri 27 Nov 2016</p>
-            <a href="/" class="button">Buy Tickets</a>
+            <a href="/" title="New York">Buy Tickets</a>
           </div>
         </div>
         <div class="tile is-parent">
@@ -436,7 +436,7 @@
             </div>
             <p class="title">Los Angeles</p>
             <p class="subtitle">Fri 27 Nov 2016</p>
-            <a href="/" class="button">Buy Tickets</a>
+            <a href="/">Buy Tickets</a>
           </div>
         </div>
         <div class="tile is-parent">
@@ -446,7 +446,7 @@
             </div>
             <p class="title">Mexico</p>
             <p class="subtitle">Fri 27 Nov 2016</p>
-            <a href="/" class="button">Buy Tickets</a>
+            <a href="/">Buy Tickets</a>
           </div>
         </div>
       </div>
@@ -459,7 +459,7 @@
             </div>
             <p class="title">Paris</p>
             <p class="subtitle">Fri 27 Nov 2016</p>
-            <a href="/" class="button">Buy Tickets</a>
+            <a href="/">Buy Tickets</a>
           </div>
         </div>
         <div class="tile is-parent">
@@ -469,7 +469,7 @@
             </div>
             <p class="title">Minsk</p>
             <p class="subtitle">Fri 27 Nov 2016</p>
-            <a href="/" class="button">Buy Tickets</a>
+            <a href="/">Buy Tickets</a>
           </div>
         </div>
         <div class="tile is-parent">
@@ -479,7 +479,7 @@
             </div>
             <p class="title">London</p>
             <p class="subtitle">Fri 27 Nov 2016</p>
-            <a href="/" class="button">Buy Tickets</a>
+            <a href="/">Buy Tickets</a>
           </div>
         </div>
       </div>
@@ -494,41 +494,41 @@
     <div class="container">
       <div class="columns">
         <div class="column">
-          <a href="/" class="box">
+          <div href="/" class="box">
             <div class="content">
               <div class="title is-5">Front End Web Development</div>
-              Develop Front End using latest standards with HTML5/CSS3 with added funtionality using JavaScript and
+              <a href='/'>Develop Front End using latest standards with HTML5/CSS3</a> with added funtionality using JavaScript and
               Vue.js.
             </div>
-          </a>
+          </div>
         </div>
         <div class="column">
-          <a href="/" class="box">
+          <div href="/" class="box">
             <div class="content">
               <div class="title is-5">Back End Web Development</div>
-              Develop Back End application/service using Node.js or ASP .NET and SQL server or Mongo DB databases.
+              <a href='/'>Develop Back End application/service using Node.js or ASP .NET</a> and SQL server or Mongo DB databases.
             </div>
-          </a>
+          </div>
         </div>
       </div>
 
       <div class="columns">
         <div class="column">
-          <a href="/" class="box">
+          <span href="/" class="box">
             <div class="content">
               <div class="title is-5">Front End Web Development</div>
-              Develop Front End using latest standards with HTML5/CSS3 with added funtionality using JavaScript and
+              <a href='/'>Develop Front End using latest standards with HTML5/CSS3</a> with added funtionality using JavaScript and
               Vue.js.
             </div>
           </a>
         </div>
         <div class="column">
-          <a href="/" class="box">
+          <div href="/" class="box">
             <div class="content">
               <div class="title is-5">Back End Web Development</div>
-              Develop Back End application/service using Node.js or ASP .NET and SQL server or Mongo DB databases.
+              <a href='/'>Develop Back End application/service using Node.js or ASP .NET</a> and SQL server or Mongo DB databases.
             </div>
-          </a>
+          </div>
         </div>
       </div>
     </div>
@@ -709,7 +709,7 @@
 
       <div class="columns">
         <div class="column is-3">
-          <a href="/" class="button is-primary is-block is-alt is-large">New Post</a>
+          <button class="button is-primary is-block is-alt is-large">New Post</button>
           <div class="menu">
             <ul class="menu-list forum-list">
               <li><span class="tag is-primary is-medium">Dashboard</span></li>
@@ -947,10 +947,10 @@
 
         <div class="field is-grouped">
           <div class="control">
-            <button class="button is-link">Submit</button>
+            <button type="submit" class="button is-link">Submit</button>
           </div>
           <div class="control">
-            <button class="button is-text">Cancel</button>
+            <button type="reset" class="button is-text">Cancel</button>
           </div>
         </div>
       </form>
