--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <input class="input">
               </p>
               <p class="control">
-                <button class="button is-info">Notify Me</button>
+                <button class="button is-link">Notify Me</button>
               </p>
             </div>
           </div>
@@ -193,7 +193,7 @@
     </div>
   </div>
 
-  <div class="hero has-background-grey-light">
+  <div class="hero has-background-grey-lighter">
     <div class="container features">
       <div class="section-heading has-text-centered">
         <div class="title is-2">Three key features</div>
@@ -250,7 +250,7 @@
     </div>
   </div>
 
-  <div class="hero is-info">
+  <div class="hero is-link">
     <div class="hero-body">
       <div class="container">
         <div class="title">List of topics</div>
@@ -741,7 +741,7 @@
                   </div>
                 </div>
                 <div class="media-right">
-                  <span class="has-text-grey-light"><i class="fa fa-comments"></i> 1</span>
+                  <span class="has-text-grey"><i class="fa fa-comments"></i> 1</span>
                 </div>
               </div>
             </div>
@@ -763,7 +763,7 @@
                   </div>
                 </div>
                 <div class="media-right">
-                  <span class="has-text-grey-light"><i class="fa fa-comments"></i> 0</span>
+                  <span class="has-text-grey"><i class="fa fa-comments"></i> 0</span>
                 </div>
               </div>
             </div>
@@ -785,7 +785,7 @@
                   </div>
                 </div>
                 <div class="media-right">
-                  <span class="has-text-grey-light"><i class="fa fa-comments"></i> 13</span>
+                  <span class="has-text-grey"><i class="fa fa-comments"></i> 13</span>
                 </div>
               </div>
             </div>
@@ -807,7 +807,7 @@
                   </div>
                 </div>
                 <div class="media-right">
-                  <span class="has-text-grey-light"><i class="fa fa-comments"></i> 2</span>
+                  <span class="has-text-grey"><i class="fa fa-comments"></i> 2</span>
                 </div>
               </div>
             </div>
@@ -829,7 +829,7 @@
                   </div>
                 </div>
                 <div class="media-right">
-                  <span class="has-text-grey-light"><i class="fa fa-comments"></i> 2</span>
+                  <span class="has-text-grey"><i class="fa fa-comments"></i> 2</span>
                 </div>
               </div>
             </div>
@@ -851,7 +851,7 @@
                   </div>
                 </div>
                 <div class="media-right">
-                  <span class="has-text-grey-light"><i class="fa fa-comments"></i> 2</span>
+                  <span class="has-text-grey"><i class="fa fa-comments"></i> 2</span>
                 </div>
               </div>
             </div>
@@ -1066,7 +1066,7 @@
     </div>
   </div> -->
 
-  <div class="footer">
+  <div class="footer has-background-white">
     <div class="container">
       <div class="columns">
         <div class="column is-3 is-offset-2">
